vpc/vpc_endpoints.tf
# todo

# resource "aws_vpc_endpoint" "" {
#   vpc_id       = aws_vpc.cloudx.id
#   service_name = "com.amazonaws.us-west-2.s3"
# }
